tests/cases/compiler-development/artifact/errors/diagnostic-generic-explicit-mismatch.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' inferred as both i64 and bool" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-explicit-mismatch.ari" display="tests/cases/generics/errors/generic-explicit-mismatch.ari" bytes=123
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-explicit-mismatch.ari" line=6 column=29 end_line=6 end_column=33 byte_start=98 byte_end=102 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-explicit-mismatch.ari:6:29\n   |\n 6 |   let value = identity<i64>(true);\n   |                             ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-explicit-mismatch.ari" line=6 column=24 end_line=6 end_column=27 byte_start=93 byte_end=96 message="first inferred 'T' as i64"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-explicit-mismatch.ari:6:24\n   |\n 6 |   let value = identity<i64>(true);\n   |                        ^^^"
  Note index=0 location=none message="generic type inference must choose one concrete type for 'T'"
  Help index=0 location=none message="make every use of 'T' agree, or pass explicit type arguments"
